[gd_scene load_steps=6 format=3 uid="uid://cnt1fux7mx67n"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_8xg6i"]
[ext_resource type="Texture2D" uid="uid://cw7kdy8r3xjms" path="res://assets/sprite_sheets/Parallax-Sheet.png" id="2_daw6c"]
[ext_resource type="Texture2D" uid="uid://dg3iuypvydskk" path="res://assets/sprite_sheets/Logo.png" id="2_ionj7"]
[ext_resource type="Texture2D" uid="uid://dv8lqv8yt14nb" path="res://assets/sprite_sheets/Button.png" id="3_lj2je"]
[ext_resource type="FontFile" uid="uid://qjva5kwbbh0t" path="res://assets/fonts/Hartsfolk.otf" id="4_wp6jy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8xg6i")

[node name="Control" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="Sprite2D" parent="Control"]
position = Vector2(960, 544)
texture = ExtResource("2_daw6c")
vframes = 5

[node name="BG2" type="Sprite2D" parent="Control"]
position = Vector2(672, 348)
texture = ExtResource("2_daw6c")
vframes = 5
frame = 1

[node name="BG3" type="Sprite2D" parent="Control"]
position = Vector2(960, 408)
texture = ExtResource("2_daw6c")
vframes = 5
frame = 2

[node name="BG4" type="Sprite2D" parent="Control"]
position = Vector2(960, 472)
texture = ExtResource("2_daw6c")
vframes = 5
frame = 3

[node name="BG5" type="Sprite2D" parent="Control"]
position = Vector2(960, 544)
texture = ExtResource("2_daw6c")
vframes = 5
frame = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("2_ionj7")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_lj2je")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_wp6jy")
text = "Start
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PracticeButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_lj2je")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/PracticeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_wp6jy")
text = "Practice
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_lj2je")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/ResetButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_wp6jy")
text = "Reset Data"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_lj2je")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_wp6jy")
text = "Exit
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/PracticeButton" to="." method="_on_practice_pressed"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/ResetButton" to="." method="_on_reset_pressed"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_pressed"]
